k8s/deployment-cfg-vol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-deployment-vol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-demo-vol
  template:
    metadata:
      labels:
        app: k8s-demo-vol
    spec:
      containers:
        - name: k8s-demo-vol
          image: k8s-demo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: "/config"
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: k8s-demo-cfg
            items:
              - key: "application-dev.properties"
                path: "application.properties"
