k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-svc
spec:
  selector:
    app.kubernetes.io/name: k8s-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
