k8s/ingress.yaml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: greetings-rules
spec:
  rules:
    - host: greetings.example.com
      http:
        paths:
          - path: *
            backend:
              serviceName: api-gateway
              servicePort: 80
